src/components/slider/slider.css
.swiper-container {
  @apply .mb-12;
}

.slide-caption {
  @apply .h-6 .mt-8 .mb-2;
}

.swiper-pagination {
  @apply .flex .justify-center;
}

.swiper-pagination-bullets {
  @apply .static .mt-2;
}

.swiper-pagination-bullet {
  @apply .rounded-none .bg-transparent .h-6;
  width: 2rem;
  border-bottom: 1px solid black;
}

